{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 17,
  "lineage": "bd5fbe7d-5b63-4b87-9834-363f88f02c04",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "googel-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-2000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-04-04T14:25:35.472-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ubioworo-project/global/firewalls/test-firewall",
            "log_config": [],
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/networks/app-vpc",
            "params": [],
            "priority": 1000,
            "project": "ubioworo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/firewalls/test-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "googel-firewall-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-04-04T14:25:35.297-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ubioworo-project/global/firewalls/test-app",
            "log_config": [],
            "name": "test-app",
            "network": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/networks/app-vpc",
            "params": [],
            "priority": 1000,
            "project": "ubioworo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/firewalls/test-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/zones/us-central1-a/instanceGroups/app-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-04-04T14:26:12.679-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "RU0EuiuRjes=",
            "generated_id": 2317422476050317083,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/healthChecks/http-health"
            ],
            "id": "projects/ubioworo-project/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "ubioworo-project",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.app_mig",
            "module.compute.google_compute_instance_template.app_template",
            "module.iam.google_service_account.service_account",
            "module.loadbalancer.google_compute_health_check.http_health_check",
            "module.network.google_compute_network.vpc_network",
            "module.subnet.google_compute_subnetwork.subnet-network"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 4386779225827065007,
            "id": "projects/ubioworo-project/global/forwardingRules/lb-rule",
            "ip_address": "35.241.1.238",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "ubioworo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/forwardingRules/lb-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/targetHttpProxies/http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.app_mig",
            "module.compute.google_compute_instance_template.app_template",
            "module.iam.google_service_account.service_account",
            "module.loadbalancer.google_compute_backend_service.backend",
            "module.loadbalancer.google_compute_health_check.http_health_check",
            "module.loadbalancer.google_compute_target_http_proxy.http_proxy",
            "module.loadbalancer.google_compute_url_map.url_map",
            "module.network.google_compute_network.vpc_network",
            "module.subnet.google_compute_subnetwork.subnet-network"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-04T14:27:16.831-07:00",
            "fingerprint": "b1jUO-88j5w=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ubioworo-project/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "ubioworo-project",
            "proxy_bind": false,
            "proxy_id": 2921881720724405467,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/urlMaps/url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.app_mig",
            "module.compute.google_compute_instance_template.app_template",
            "module.iam.google_service_account.service_account",
            "module.loadbalancer.google_compute_backend_service.backend",
            "module.loadbalancer.google_compute_health_check.http_health_check",
            "module.loadbalancer.google_compute_url_map.url_map",
            "module.network.google_compute_network.vpc_network",
            "module.subnet.google_compute_subnetwork.subnet-network"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-04T14:27:05.063-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "dGwov-HkQUA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ubioworo-project/global/urlMaps/url-map",
            "map_id": 4255354828592266439,
            "name": "url-map",
            "path_matcher": [],
            "project": "ubioworo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.app_mig",
            "module.compute.google_compute_instance_template.app_template",
            "module.iam.google_service_account.service_account",
            "module.loadbalancer.google_compute_backend_service.backend",
            "module.loadbalancer.google_compute_health_check.http_health_check",
            "module.network.google_compute_network.vpc_network",
            "module.subnet.google_compute_subnetwork.subnet-network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ubioworo-project/global/networks/app-vpc",
            "mtu": 0,
            "name": "app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7399214242940600108",
            "numeric_id": "7399214242940600108",
            "project": "ubioworo-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/networks/app-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-04-04T14:25:35.915-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/ubioworo-project/regions/us-central1/subnetworks/app-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/global/networks/app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ubioworo-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.10.0/24",
                "range_name": "tf-test-secondary-range-update1"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ubioworo-project/regions/us-central1/subnetworks/app-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8284366720147930912
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}